--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Portifolio</title>
 
     <!-- Links -->
-     <link rel="stylesheet" href="/src/style.css">
-     <link rel="stylesheet" href="/src/responsivo.css">
+     <link rel="stylesheet" href="src/style.css">
+     <link rel="stylesheet" href="src/responsivo.css">
 
      <!-- Font -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -74,15 +74,15 @@
         <h1>Habilidades</h1>
         <div class="icons">
             <div class="html">
-                <img src="/src/html.webp" alt="icone_do_HTML">
+                <img src="src/html.webp" alt="icone_do_HTML">
                 <p>HTML é uma das linguagens com as quais estou mais familiarizado. Estou estudando ela há um pouco mais de 4 meses, fazendo 1 projeto de treino por semana.</p>
             </div>
             <div class="css">
-                <img src="/src/css.webp" alt="icone_do_CSS">
+                <img src="src/css.webp" alt="icone_do_CSS">
                 <p>Assim como o HTML, o CSS é outra linguagem com a qual estou muito familiarizado. Fazendo os mesmos projetos de treino.</p>
             </div>
             <div class="js">
-                <img src="/src/java-script.webp" alt="icone_do_JavaScript">
+                <img src="src/java-script.webp" alt="icone_do_JavaScript">
                 <p>Java-Script é uma linguagem que eu não domino muito, comecei a estudá-la recentemente.</p>
             </div>
         </div>
