--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Portifolio</title>
 
     <!-- Links -->
-     <link rel="stylesheet" href="src/style.css">
-     <link rel="stylesheet" href="src/responsivo.css">
+     <link rel="stylesheet" href="/src/style.css">
+     <link rel="stylesheet" href="/src/responsivo.css">
+     <link rel="icon" href="/src/icone.webp" type="image/x-icon">
 
      <!-- Font -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,13 +33,13 @@
         <div class="container">
             <h3>oi, eu sou</h3>
             <h1>Kauan Leandro</h1>
-            <p>Estudante de Front-end</p>
+            <p>Desenvolvedor Front-end</p>
             <a href="https://github.com/EncryptKalean" target="_blank">Github</a>
         </div>
-        <div class="foto"></div>
+        <div class="perfil-foto"></div>
     </section>
     <section id="sobre">
-        <div class="foto"></div>
+        <div class="sobre-foto"></div>
         <div class="container">
             <h2>Sobre mim</h2>
             <p>Meu nome é Kauan Leandro, tenho 20 anos e mexo com computadores desde criança. Sempre achei a programação muito fascinante, apesar disso, nunca a estudei. Comecei a estudar programação no final de 2024, quando conheci o curso Full-Stack da Danki-code. Por enquanto, estou focado na área de Front-end.</p>
@@ -47,42 +48,56 @@
     </section>
     <section id="projetos">
         <h1>Projetos</h1>
+        <p id="projetos-mouse">*passe o mouse nos projetos*</p>
+        <p id="projetos-mouse">*pode clicar no titulo ou na descrição dos projetos*</p>
         <div class="container-projetos">
-            <div class="projeto">
-                <div class="breve">
-                    <p>Em breve</p>
+            <div class="projeto pj1">
+                <div class="informacoes-projeto">
+                    <a href="https://github.com/EncryptKalean/Landing-page-basica" target="_blank">
+                        <h1>Landing page básica</h1>
+                        <p>Isso é um projeto de treino da danki-code. O objetivo era fazer um modelo de landing page básica só com HTML e CSS.</p>
+                    </a>
                 </div>
             </div>
-            <div class="projeto">
-                <div class="breve">
-                    <p>Em breve</p>
+            <div class="projeto pj2">
+                <div class="informacoes-projeto">
+                    <a href="https://github.com/EncryptKalean/YouTube-Template" target="_blank">
+                        <h1>YouTube</h1>
+                        <p>Aqui tentei recriar o YouTube usando somente HTML e CSS.</p>
+                    </a>
                 </div>
             </div>
-            <div class="projeto">
-                <div class="breve">
-                    <p>Em breve</p>
+            <div class="projeto pj3">
+                <div class="informacoes-projeto">
+                    <a href="https://github.com/EncryptKalean/Treino-de-Formulario" target="_blank">
+                        <h1>Treino de Formulario</h1>
+                        <p>Fiz isso depois de uma aula da Danki-Code sobre inputs.</p>
+                    </a>
                 </div>
             </div>
-            <div class="projeto">
+            <div class="projeto pj4">
                 <div class="breve">
-                    <p>Em breve</p>
+                    <a href="">
+                        <p>Em breve</p>
+                    </a>
                 </div>
             </div>
         </div>
+        <p>Esses não são todos os meus projetos, são só os que eu mais gostei.</p>
     </section>
     <section id="habilidades">
         <h1>Habilidades</h1>
         <div class="icons">
             <div class="html">
-                <img src="src/html.webp" alt="icone_do_HTML">
+                <img src="/src/html.webp" alt="icone_do_HTML">
                 <p>HTML é uma das linguagens com as quais estou mais familiarizado. Estou estudando ela há um pouco mais de 4 meses, fazendo 1 projeto de treino por semana.</p>
             </div>
             <div class="css">
-                <img src="src/css.webp" alt="icone_do_CSS">
+                <img src="/src/css.webp" alt="icone_do_CSS">
                 <p>Assim como o HTML, o CSS é outra linguagem com a qual estou muito familiarizado. Fazendo os mesmos projetos de treino.</p>
             </div>
             <div class="js">
-                <img src="src/java-script.webp" alt="icone_do_JavaScript">
+                <img src="/src/java-script.webp" alt="icone_do_JavaScript">
                 <p>Java-Script é uma linguagem que eu não domino muito, comecei a estudá-la recentemente.</p>
             </div>
         </div>
